--- a/6dejaar/kinematica/knmtc_1dim_ERB.tex
+++ b/6dejaar/kinematica/knmtc_1dim_ERB.tex
@@ -43,6 +43,6 @@ De snelheid $v$ is gelijk aan de beginsnelheid $v_0=v(t_0)$ omdat in een ERB de 
 \end{image}
 \captionof{figure}{Grafieken van een ERB}
 
-
+% TODO (in de verdere toekomst...): tikz ipv jpg
 
 \end{document}
