--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -9,5 +9,43 @@
     \xmsource\xmuitleg
 
 
+
+	\subsection*{Positie en plaatsfunctie}
+
+	De beweging van een puntmassa wordt beschreven door haar positie in de ruimte als functie van de tijd, of dus door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. Deze functie noemen we de \textbf{plaatsfunctie} $x = x(t)$. 
+	Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een coördinaatas
+	% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
+	en $t$ is de variabele die symbool staat voor de tijd
+	%\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}
+	. 
+	Met een welbepaald tijdstip $t_1$ 
+	%\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
+	\begin{eqnarray*}
+	x_1=x(t_1)
+	\end{eqnarray*}
+	In onderstaande figuur (\ref{grafplaatsfunctie}) zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weer\-ge\-ge\-ven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
+	
+	\begin{image}
+	\includegraphics[width=0.45\textwidth]{Serway2p1(1)}
+	$\qquad$   % hack 
+	\includegraphics[width=0.45\textwidth]{Serway2p1(2)}
+	\end{image}
+	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
+	
+	Het verschil tussen de plaatsen op twee tijdstippen $t_1$ en $t_2$ noemen we de \textbf{verplaatsing} tussen $t_1$ en $t_2$, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
+
+	\begin{definition}
+	De \textbf{verplaatsing} \(\Delta x\) is het verschil tussen twee posities:
+	\[
+		\Delta x = x_2-x_1
+	\]
+	\end{definition}
+	% TODO: opmerking toevoegen dat de natatie $\Delta$ *erg* slecht is, omdat ze de indices 1 en 2 niet bevat!
+
+	In de figuur is de verplaatsing van de auto tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
+
+%%%\newline
+Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
+
 	
 \end{document}
