--- a/6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex
+++ b/6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex
@@ -10,17 +10,17 @@
 
 
 
-Een eendimensionale beweging met constante versnelling noemt de  \textit{eenparig veranderlijke rechtlijnige beweging} (EVRB). Eenparig betekent gelijkmatig; de snelheidsverandering is steeds gelijk. In symbolen: $a(t)=a$ waarbij $a$ een reëel getal is. Ook voor deze beweging kan je de plaatsfunctie en snelheidsfunctie bepalen en zo het verloop van de plaats en snelheid in functie van de tijd kennen. 
+Een eendimensionale beweging met constante versnelling noemt de  \textit{eenparig veranderlijke rechtlijnige beweging} (EVRB). Eenparig betekent gelijkmatig; de snelheidsverandering is steeds gelijk. De grafiek van $a(t)=a$ is een constante functie waarbij $a$ een reëel getal is. Ook voor deze beweging kan je de plaatsfunctie en snelheidsfunctie bepalen en zo het verloop van de plaats en snelheid in functie van de tijd kennen. 
 
 
-Omdat \(a\) constant is geldt \( \bar{a} = a\) . De gemiddelde snelheid en gemiddelde versnelling voor \(t_0 = 0\)worden gegeven door: 
+Omdat \(a\) constant is geldt \( \bar{a} = a\). Voor \(t_0 = 0\) worden de gemiddelde snelheid en versnelling gegeven door: 
 
 \[
 \bar{v} = \frac{\Delta x}{\Delta t} = \frac{x - x_0}{t - t_0} = \frac{x - x_0}{t}
 \]
 
 \[
-a = \frac{v - v_0}{t}
+a = \frac{\Delta v}{\Delta t} = \frac{v - v_0}{t - t_0} = \frac{v - v_0}{t}
 \]
 
 Deze formules kunnen alsvolgt omgevormt worden naar een eerstegraadsvergelijking in de veranderlijke \(t\): 
