--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -12,18 +12,21 @@
 
 	\subsection*{Positie en plaatsfunctie}
 
-	De beweging van een puntmassa wordt beschreven door haar positie in de ruimte als functie van de tijd, of dus door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. Deze functie noemen we de \textbf{plaatsfunctie} $x = x(t)$. 
+	De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. 
+	De \textbf{plaatsfunctie} $x = x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waarop de puntmassa zich bevindt. 
 	Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een coördinaatas
 	% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
-	en $t$ is de variabele die symbool staat voor de tijd
+	en $t$ is de variabele die symbool staat voor de tijd.
 	%\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}
-	. 
-	Met een welbepaald tijdstip $t_1$ 
+	
+
+	De positie op een welbepaald tijdstip $t_1$ wordt genoteerd als 
 	%\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
 	\begin{eqnarray*}
 	x_1=x(t_1)
 	\end{eqnarray*}
-	In onderstaande figuur (\ref{grafplaatsfunctie}) zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weer\-ge\-ge\-ven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
+
+	In onderstaande figuur zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weergegeven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
 	
 	\begin{image}
 	\includegraphics[width=0.45\textwidth]{Serway2p1(1)}
@@ -32,7 +35,7 @@
 	\end{image}
 	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
 	
-	Het verschil tussen de plaatsen op twee tijdstippen $t_1$ en $t_2$ noemen we de \textbf{verplaatsing} tussen $t_1$ en $t_2$, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
+	De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
 
 	\begin{definition}
 	De \textbf{verplaatsing} \(\Delta x\) is het verschil tussen twee posities:
