--- a/6dejaar/kinematica/knmtc_bgrppn_versnelling.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_versnelling.tex
@@ -11,35 +11,41 @@
 
 
 
-	\subsection*{Gemiddelde versnelling}
+\subsection*{Gemiddelde versnelling}
 
-	Ook de snelheid kan veranderen in de tijd. Dit ken je uit het dagelijks leven als versnellen of vertragen.
-	
-	\begin{definition}
-	
-	De gemiddelde versnelling \(\overline{a}\) tussen twee tijdstippen wordt gedefiniëerd als
-	\[
-	\overline{a}=\frac{\Delta v}{\Delta t}=\frac{v_2-v_1}{t_2-t_1}
-	\]
-	De eenheid van versnelling is meter per seconde, per seconde -- wat meter per seconde in het kwadraat geeft $[a]=\rm\,m/s^2$.
-	\end{definition}
-	
-	\begin{denkvraag*}{}
-	Kan je uitleggen wat de eenheid meter per seconde, per seconde betekent? 
-	\end{denkvraag*}
+Ook de snelheid kan veranderen in de tijd. Dit ken je uit het dagelijks leven als versnellen of vertragen.
 
-	\subsection*{Ogenblikkelijke versnelling}
+\begin{definition}
 
-Voor een ogenblikkelijke verandering van de snelheid maken we eenzelfde redenering als voor de ogenblikkelijke verandering van de positie.
+De gemiddelde versnelling \(\overline{a}\) tussen twee tijdstippen wordt gedefiniëerd als
+\[
+\overline{a}=\frac{\Delta v}{\Delta t}=\frac{v_2-v_1}{t_2-t_1}
+\]
+De eenheid van versnelling is meter per seconde, per seconde -- wat meter per seconde in het kwadraat geeft $[a]=\rm\,m/s^2$.
+\end{definition}
+
+\begin{denkvraag*}{}
+Kan je uitleggen wat de eenheid meter per seconde, per seconde betekent? 
+\end{denkvraag*}
+
+\subsection*{Ogenblikkelijke versnelling}
+
+De gemiddelde versnelling \(\overline{a}\) geeft de verandering in snelheid \textit{tussen} twee tijdstippen \(t_1\) en \(t_2\).  Om de ogenblikkelijke versnelling \(a\) op één tijdstip \(t\) te bepalen wordt -net zoals bij de ogenblikkelijke snelheid- gebruik gemaakt van de afgeleide. 
 
 \begin{definition}
 De ogenblikkelijke snelheid wordt gedefinieerd als de afgeleide van de snelheidsfunctie \(v(t)\):
 \[
 a=\lim_{t\to t_0}\frac{v(t)-v(t_0)}{t-t_0} = \frac{dv}{dt}=\frac{d^2x}{dt^2}
 \]
-
 De notatie met een accent $a(t)=v'(t)$ of $a=v'$ wordt op dezelfde manier als in de wiskunde gebruikt. $a(t)$ is een functie die op elk moment de snelheid geeft. 
 \end{definition}
-	
+
+\begin{exercise}
+Verklaar onderstaande meme. 
+\begin{image}
+\includegraphics{meme_versnelling}
+\end{image}
+
+\end{exercise}
 	
 \end{document}
