--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -9,5 +9,23 @@
     \xmsource\xmuitleg
 
 
+De kinematica \textbf{beschrijft} bewegingen zonder een verklaring (bv. zwaarte\textit{kracht}) te geven die de oorzaak van de beweging verklaart. 
+Als een appel van een boom valt, kan je veel vragen over deze valbeweging beantwoorden: 
+
+\begin{itemize}
+	\item Hoe lang duurt het voor de appel de grond raakt? 
+	\item Wat is de snelheid van de appel na 1 seconde? 
+	\item Wat is de snelheid van de appel op het moment dat hij de grond raakt? 
+	\item ...
+\end{itemize}
+
+In dit hoofdstuk worden de basisbegrippen uit de kinematica geïntroduceerd. 
+
+% Als je de valbeweging van een appel wilt beschrijven, heb je eerst een \textbf{referentiestelsel} nodig van waaruit je dit zal doen. In dit referentiestelsel een plaatsvector, snelheidsvector, versnellingsvector, ... toekennen en de grootte van deze vectoren beschrijven met vergelijkingen. 
+
+% deze zin is enkel goed als ze het al kennen. 
+
+% wat we niet doen: 
+
 	
 \end{document}
