--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -10,10 +10,22 @@
 
 
 
+
+% EERST: ALS JE IETS EEN PLAATS GEEFT IS DAT EEN PLAATSVECTOR 
+% ALS IETS BEWEEGT BEWEEGT DEZE VECTOR 
+% JE WILT EEN FUNCTIE DIE VOOR ELKE TIJD DE VECTOR GEEFT --> PLAATSFUNCTIE 
+
+
+
+
+
+
 	\subsection*{Positie en plaatsfunctie}
 
+	% DIT IS ALLEMAAL EENDIMENSIONAAL; DE VERPLAATSING MOET EIGENLIJK GEDEFINIEERD WORDEN ALS EEN VECTORVERSCHIL... 
+
 	De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. 
-	De \textbf{plaatsfunctie} $x = x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waarop de puntmassa zich bevindt. 
+	De \textbf{plaatsfunctie} $x = x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waar de puntmassa zich bevindt. 
 	Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een coördinaatas
 	% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
 	en $t$ is de variabele die symbool staat voor de tijd.
