--- a/semester1.tex
+++ b/semester1.tex
@@ -43,7 +43,6 @@
 \part{Eendimensionale bewegingen}
 
 \activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
-\activitychapter{6dejaar/kinematica/knmtc_1dim_begrippen.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_ERB.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_rechtstreeks.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
@@ -76,7 +75,7 @@
 
 \activitychapter{6dejaar/dynamica/nwtn_toep_intro.tex}
 \activitychapter{6dejaar/dynamica/nwtn_toep_algemeen.tex}
-\activitychapter{6dejaar/dynamica/nwtn_toep_krachten.tex}
+% \activitychapter{6dejaar/dynamica/nwtn_toep_krachten.tex}
 \activitychapter{6dejaar/dynamica/nwtn_toep_dynamica_ECB.tex}
 
 
