--- a/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
@@ -9,14 +9,18 @@
     \xmsource\xmuitleg
 
 
-Elke beweging wordt beschreven ten opzichte van een \textbf{referentiestelsel}, hierbij wordt de ruimte zo ingedeeld dat elke plaats in de ruimte eenduidig wordt bepaald door een aantal getallen die \textbf{coördinaten} genoemd worden. 
+Elk systeem wordt beschreven ten opzichte van een \textbf{referentiestelsel}. 
+Hierbij wordt de ruimte zo ingedeeld dat elke plaats in de ruimte eenduidig wordt bepaald door \textbf{coördinaten}:
+dit zijn een aantal getallen die eenduidig deze plaats bepalen van een punt ten opzichte van het gekozen assenstelsel en de oorsprong. 
 
-De keuze van het referentiestelsel is altijd relatief. Toch is het erg belangrijk om telkens duidelijk van waaruit een beweging beschreven wordt. Stel je voor dat je aan het studeren abent an een bureau en je pen op \textit{ooghoogte} voor je houdt, hoe 'hoog' bevindt je pen zich dan? Meet je dit vanaf je tafelblad, de vloer, het straatniveau, het aantal meters boven de zeespiegel, ...? 
+Als je een vogel ziet vliegen kan je deze beweging op verschillende manieren beschrijven: de vogel kan \textit{stijgen} of een \textit{duikvlucht} nemen. De vogel kan \textit{omdraaien} of -indien het een kolibri is- misschien zelfs \textit{blijven hangen}. Om deze bewegingen kwantitatief en nauwkeurig te bespreken kies je een referentiestelsel en coördinaatassen. Op die manier krijgt de vogel een positievector die de positie aangeeft, een snelheidsvector die de snelheid aangeeft, ... 
 
-Als je een vogel ziet vliegen kan je deze beweging op verschillende manieren beschrijven: de vogel kan \textit{stijgen} of een \textit{duikvlucht} nemen. De vogel kan \textit{omdraaien} of -indien het een kolibri is- misschien zelfs blijven hangen. Om deze bewegingen kwantitatief en nauwkeurig te bespreken kies je een referentiestelsel en coördinaatassen. Op die manier krijgen objecten in de ruimte een positie, snelheid, ... 
+De keuze van het referentiestelsel is altijd relatief. Toch is het erg belangrijk om telkens duidelijk van waaruit een beweging beschreven wordt.
+Stel je voor dat je nu aan een bureau gedreven aan het studeren bent en je houdt je pen op \textit{ooghoogte}, hoe 'hoog' bevindt je pen zich dan? Meet je dit vanaf je tafelblad, de vloer, het straatniveau, het aantal meters boven de zeespiegel, ...? In welke eenheid meet je dit? Wat is je eenheidsvector en in welke richting kies je de positieve as? 
+
 
 \begin{exercise}
-De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geen twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
+De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geef twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
 
 \begin{image}
 	\includegraphics[width=0.6\textwidth]{kolibri}
@@ -24,8 +28,11 @@ De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bl
 \end{image}
 
 \begin{oplossing}
-Het referentiestelsel met de kern van de aarde als oorsprong. (De kolibri draait nu rond de as van de aarde...)
-Het referentiestelsel met de zon als middelpunt (De kolibri draait nu ook rond de zon...)
+\begin{itemize}
+\item Een referentiestelsel met de kern van de aarde als oorsprong. (De kolibri draait nu rond de as van de aarde...)
+\item Een referentiestelsel met de zon als middelpunt (De kolibri draait nu ook rond de zon...)
+\end{itemize}
+
 \end{oplossing}
 
 \end{exercise}
