yt video link fix

--- a/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
+++ b/6dejaar/kinematica/knmtc_1dim_verticale_worp.tex
@@ -92,7 +92,7 @@ De gemiddelde snelheid vinden we door de totale afgelegde weg te delen door de t
 
 \begin{expandable}{youtube}{Een universiteitscollege over de leerstof van dit hoofdstuk.}
 
-	\youtube{https://youtu.be/q9IWoQ199_o}
+	\youtube{q9IWoQ199_o}
 
 
 \end{expandable}
