tekst uit word cursus toegevoegd

--- a/6dejaar/vectoren/vct_bewerkingen.tex
+++ b/6dejaar/vectoren/vct_bewerkingen.tex
@@ -9,4 +9,16 @@
     \xmsource\xmuitleg
 
 
+	% ONAFHANKELIJKE ACTIVITIES MAKEN? 
+
+% SCALAIRE VERMENIGVULDIGING 
+
+% SOM EN VERSCHIL 
+
+% ONTBINDEN IN COMPONENTEN 
+
+% SCALAIR PRODUCT 
+
+% VECTORIEEL PRODUCT 
+
 \end{document}
