--- a/6dejaar/vectoren/vct_begrip.tex
+++ b/6dejaar/vectoren/vct_begrip.tex
@@ -9,7 +9,24 @@
     \xmsource\xmuitleg
 
 
+	In de fysica wordt de natuur vaak beschreven met grootheden. Die kan men opsplitsen in twee categorieën: scalaire grootheden (scalars) en vectoriële grootheden (vectoren). 
+	Het onderscheid ertussen en de omgang met beiden zijn ontzettend belangrijk in fysica.
+	Grootheden die de vraag kunnen oproepen: “Naar waar gericht?” zijn vectoren, grootheden waarbij die vraag geen antwoord heeft, zijn scalars. 
 
+	Voorbeeld: een helikopter vliegt met een snelheid van 40 km/h. 
+	Vraag: “Naar waar?” Antwoord: “Naar het zuiden, naar Brussel, naar omhoog, schuin naar onderen, …” 
+	Er zijn vele betekenisvolle antwoorden mogelijk. 
+	Snelheid is dus een vector. 
+	Stel het zwembadwater heeft een temperatuur van 27°C. 
+	Vraag: “Naar waar?” Antwoord: “Hier is geen zinnig antwoord op.” 
+	Temperatuur is dus een scalar.
+
+	Een vectoriële grootheid heeft drie variabele kenmerken: grootte, richting en zin. 
+	Voorbeeld: de helikopter vliegt aan 40 km/h, horizontaal en naar het zuiden. 
+	Een scalaire grootheid heeft slechts één kenmerk: de grootte (waarin soms ook een teken vervat zit). 
+	Voorbeeld: een sneeuwbal heeft een temperatuur van -10°C.
+	De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van de vector.
+	
 
 	
 \end{document}
