--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -17,47 +17,108 @@
 
 
 
+\subsection*{Positie en plaatsfunctie}
+
+Met een referentiestelsel en coördinaatassen kan elke plaats in de ruimte worden vastgelegd met een \textbf{plaatsvector}, genoteerd door \(\vec{x}\).  
+
+\begin{image}
+\begin{tikzpicture}
+	\draw[->] (-1,0) -- (4,0) node[right] {$x$};
+	\draw[->] (0,-1) -- (0,4) node[above] {$y$};
+  
+	\coordinate (X) at (2,3);
+	\fill (X) circle (2pt) node[above right] {positie $x$};
+	\draw[->, thick, blue] (0,0) -- (X) node[midway, below right] {plaatsvector $\vec{x}$};
+  \end{tikzpicture}
+\end{image}
+  
+
+Als \(x\) een puntmasse voorstelt die beweegt, verrandert de plaatsvector   
+De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. 
+De \textbf{plaatsfunctie} $x = x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waar de puntmassa zich bevindt. 
+Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een coördinaatas
+% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
+en $t$ is de variabele die symbool staat voor de tijd.
+%\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}
+
+
+De positie op een welbepaald tijdstip $t_1$ wordt genoteerd als 
+%\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
+\begin{eqnarray*}
+x_1=x(t_1)
+\end{eqnarray*}
+
+In onderstaande figuur zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weergegeven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
+
+\begin{image}
+\includegraphics[width=0.45\textwidth]{Serway2p1(1)}
+$\qquad$   % hack 
+\includegraphics[width=0.45\textwidth]{Serway2p1(2)}
+\end{image}
+\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
+
+\begin{image}
+	\begin{tikzpicture}
+	\begin{axis}[
+		axis x line=bottom,
+		axis y line=left,
+		xlabel={$x$}, ylabel={$y$},
+		xmin=0, xmax=50,              % x-axis 0 to 50
+		ymin=-45, ymax=60,            % y-axis -60 to 60
+		xtick={0,10,...,50},          % x ticks every 10
+		ytick={-60,-50,...,60},       % y ticks every 10
+		grid=both,
+		width=12cm, height=6cm,
+		samples=200,
+		domain=0:50,
+		axis line style={->},         % arrows at ends
+		% scale y visually double the x
+		x=0.2cm,                      % compress x
+		y=0.1cm,                      % stretch y
+		enlarge y limits=0.05,
+	]
+		% scaled sine function to fit -60..60
+		\addplot[blue, thick] {60*sin(deg((pi/50)*x + pi/4))};
+	\end{axis}
+	\end{tikzpicture}
+\end{image}
 
 
 
-	\subsection*{Positie en plaatsfunctie}
 
-	% DIT IS ALLEMAAL EENDIMENSIONAAL; DE VERPLAATSING MOET EIGENLIJK GEDEFINIEERD WORDEN ALS EEN VECTORVERSCHIL... 
 
-	De beweging van een puntmassa wordt beschreven door een \textit{functie} die de \textbf{plaats} weergeeft in functie van de \textbf{tijd}. 
-	De \textbf{plaatsfunctie} $x = x(t)$ geeft voor elk tijdstip \(t\) de positie \(x\) waar de puntmassa zich bevindt. 
-	Bij een ééndimensionale beweging is $x$ een getal, namelijk de positie op een coördinaatas
-	% \footnote{Een coördinaatas is een as van een cartesiaans assenstelsel, met een oorsprong en een ori\"entatie.} 
-	en $t$ is de variabele die symbool staat voor de tijd.
-	%\footnote{In de fysica gebruiken we de wiskunde als `taal' om de wetmatigheden van de natuur in uit te drukken. Wiskundige variabelen en objecten zoals functies krijgen nu een fysische betekenis. $x(t)$ is dus niets anders dan een functie $f(x)$ of $y(x)$ zoals je die in wiskunde kent. Alleen nemen wij nu niet voor de onafhankelijke variabele het symbool $x$ maar het symbool $t$ omdat deze symbool moet staan voor de tijd. En voor het symbool $f$ gebruiken wij nu het symbool $x$ omdat de beeldwaarden van de functie nu als betekenis een positie op een co\"ordinaatas hebben.}
-	
+De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
 
-	De positie op een welbepaald tijdstip $t_1$ wordt genoteerd als 
-	%\footnote{Natuurlijk kan de index 1 ook vervangen worden door andere indices. Voorbeelden zijn $x_0=x(t_0)$ en $x_2=x(t_2)$.} komt de positie $x_1$ op de coördinaatas overeen volgens de formule
-	\begin{eqnarray*}
-	x_1=x(t_1)
-	\end{eqnarray*}
+\begin{definition}
+De \textbf{verplaatsing} \(\Delta x\) is het verschil tussen twee posities:
+\[
+	\Delta x = x_2-x_1
+\]
 
-	In onderstaande figuur zie je een auto op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ weergegeven op verschillende posities, met een grafiek van de bijbehorende plaatsfunctie.
-	
-	\begin{image}
-	\includegraphics[width=0.45\textwidth]{Serway2p1(1)}
-	$\qquad$   % hack 
-	\includegraphics[width=0.45\textwidth]{Serway2p1(2)}
-	\end{image}
-	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
-	
-	De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$ (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
+\tikzset{>={latex[scale=1.2]}}
 
-	\begin{definition}
-	De \textbf{verplaatsing} \(\Delta x\) is het verschil tussen twee posities:
-	\[
-		\Delta x = x_2-x_1
-	\]
-	\end{definition}
-	% TODO: opmerking toevoegen dat de natatie $\Delta$ *erg* slecht is, omdat ze de indices 1 en 2 niet bevat!
+\begin{image}
+	\begin{tikzpicture}
+		
+		\draw[->] (-0.5,0) -- (3.5,0) node[right] {$x$};
+		\draw[->] (0,-0.5) -- (0,2.5) node[above] {$y$};
+		
+		\coordinate (X) at (1,2);
+		\coordinate (Y) at (3,1);
+		
+		% \fill (X) circle (2pt) node[above] {};
+		% \fill (Y) circle (2pt) node[above right] {};
+		
+		\draw[->, thick] (0,0) -- (X) node[pos= 0.6, left] {$\vec{x}_1$};
+		\draw[->, thick] (0,0) -- (Y) node[midway, below, yshift=2pt] {$\vec{x}_2$};
+		\draw[->, thick, blue] (X) -- (Y) node[midway, above right] { $\Delta \vec{x}$};
+		
+	\end{tikzpicture}
+\end{image}
+\end{definition}
+% TODO: opmerking toevoegen dat de natatie $\Delta$ *erg* slecht is, omdat ze de indices 1 en 2 niet bevat!
 
-	In de figuur is de verplaatsing van de auto tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
+In de figuur is de verplaatsing van de auto tussen de tijdstippen $t_0$ en $t_1$ gelijk aan $\Delta x = x_1-x_0=50\rm\,m-30\rm\,m=20\rm\,m$ en is de verplaatsing tussen de tijdstippen $t_2$ en $t_4$ gelijk aan $\Delta x=x_4-x_2=-40\rm\,m-40\rm\,m=-80\rm\,m$. Deze laatste verplaatsing is negatief, wat aangeeft dat de auto netto naar achteren is bewogen -- tegengesteld aan de zin van de gekozen as.
 
 %%%\newline
 Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
